--- a/My Little Pet/Base.lproj/Main.storyboard
+++ b/My Little Pet/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="My_Little_Pet" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,125 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="z2I-xN-KpS">
+                                <rect key="frame" x="0.0" y="25" width="600" height="575"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground.png" translatesAutoresizingMaskIntoConstraints="NO" id="T6A-kd-36E">
+                                <rect key="frame" x="0.0" y="540" width="600" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="rbC-Ns-G6Z"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="livespanel.png" translatesAutoresizingMaskIntoConstraints="NO" id="sc3-CA-EdM">
+                                <rect key="frame" x="180" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="FDW-qa-72y"/>
+                                    <constraint firstAttribute="width" constant="240" id="iFz-SM-ph1"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Dc5-a6-X5R">
+                                <rect key="frame" x="210" y="39" width="180" height="50"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull.png" translatesAutoresizingMaskIntoConstraints="NO" id="ecC-eV-lhU">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="3mu-XT-GoA"/>
+                                            <constraint firstAttribute="width" constant="50" id="DI3-0b-MZc"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull.png" translatesAutoresizingMaskIntoConstraints="NO" id="658-OU-7yg">
+                                        <rect key="frame" x="65" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="I2o-3e-Tq4"/>
+                                            <constraint firstAttribute="width" constant="50" id="quN-Kk-I1B"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ujq-o0-7cr">
+                                        <rect key="frame" x="130" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="8bT-pr-eUg"/>
+                                            <constraint firstAttribute="width" constant="50" id="J6S-bF-l4M"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ts0-Af-PTA" customClass="MonsterImg" customModule="My_Little_Pet" customModuleProvider="target">
+                                <rect key="frame" x="91" y="171" width="575" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="575" id="BYE-Pl-MH3"/>
+                                    <constraint firstAttribute="height" constant="375" id="nOl-8p-rXu"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="150" translatesAutoresizingMaskIntoConstraints="NO" id="Xcm-gk-6OH">
+                                <rect key="frame" x="130" y="125" width="340" height="98"/>
+                                <subviews>
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart.png" translatesAutoresizingMaskIntoConstraints="NO" id="VPs-KS-dFq" customClass="DragImg" customModule="My_Little_Pet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="95" height="98"/>
+                                    </imageView>
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qcf-0T-erX" customClass="DragImg" customModule="My_Little_Pet" customModuleProvider="target">
+                                        <rect key="frame" x="245" y="0.0" width="95" height="98"/>
+                                    </imageView>
+                                </subviews>
+                                <variation key="heightClass=compact" axis="horizontal" spacing="350"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sc3-CA-EdM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="1tJ-WW-HMh"/>
+                            <constraint firstItem="Xcm-gk-6OH" firstAttribute="top" secondItem="Dc5-a6-X5R" secondAttribute="bottom" constant="35" id="6uu-az-soK"/>
+                            <constraint firstItem="Xcm-gk-6OH" firstAttribute="centerX" secondItem="Dc5-a6-X5R" secondAttribute="centerX" id="8l7-c5-TQk"/>
+                            <constraint firstItem="Xcm-gk-6OH" firstAttribute="top" secondItem="Dc5-a6-X5R" secondAttribute="bottom" constant="36" id="BTG-CA-8g4"/>
+                            <constraint firstItem="Ts0-Af-PTA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="78.5" id="J5E-9o-Lc6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="z2I-xN-KpS" secondAttribute="trailing" constant="-20" id="Rtz-5J-Gmd"/>
+                            <constraint firstItem="sc3-CA-EdM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SrM-tG-dBf"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="T6A-kd-36E" secondAttribute="bottom" id="TfM-Sa-9KV"/>
+                            <constraint firstItem="T6A-kd-36E" firstAttribute="top" secondItem="Ts0-Af-PTA" secondAttribute="bottom" constant="-6" id="UJZ-OX-boU"/>
+                            <constraint firstItem="T6A-kd-36E" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="VTX-wo-6AH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="z2I-xN-KpS" secondAttribute="bottom" id="X7f-tO-sfn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="T6A-kd-36E" secondAttribute="trailing" constant="-20" id="ZDb-A9-zmO"/>
+                            <constraint firstItem="z2I-xN-KpS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="5" id="aFb-V5-3yO"/>
+                            <constraint firstItem="z2I-xN-KpS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="aca-nC-NDh"/>
+                            <constraint firstItem="Xcm-gk-6OH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fqd-n1-huf"/>
+                            <constraint firstItem="Dc5-a6-X5R" firstAttribute="centerX" secondItem="sc3-CA-EdM" secondAttribute="centerX" id="itk-iR-IOp"/>
+                            <constraint firstItem="Dc5-a6-X5R" firstAttribute="centerY" secondItem="sc3-CA-EdM" secondAttribute="centerY" id="l7f-xs-G4v"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="6uu-az-soK"/>
+                                <exclude reference="8l7-c5-TQk"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="6uu-az-soK"/>
+                                <include reference="8l7-c5-TQk"/>
+                                <exclude reference="BTG-CA-8g4"/>
+                                <exclude reference="fqd-n1-huf"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="foodImage" destination="Qcf-0T-erX" id="0dG-K5-bbk"/>
+                        <outlet property="heartImage" destination="VPs-KS-dFq" id="mI2-X7-Rvy"/>
+                        <outlet property="lifeOneImage" destination="ecC-eV-lhU" id="cGS-ik-zzz"/>
+                        <outlet property="lifeThreeImage" destination="Ujq-o0-7cr" id="yCH-aE-8Lf"/>
+                        <outlet property="lifeTwoImage" destination="658-OU-7yg" id="0ca-og-adG"/>
+                        <outlet property="monsterImg" destination="Ts0-Af-PTA" id="din-a6-qqe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="440" y="377"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg.png" width="768" height="1024"/>
+        <image name="food.png" width="95" height="98"/>
+        <image name="ground.png" width="1444" height="151"/>
+        <image name="heart.png" width="95" height="98"/>
+        <image name="idle1.png" width="889" height="615"/>
+        <image name="livespanel.png" width="468" height="137"/>
+        <image name="skull.png" width="95" height="98"/>
+    </resources>
 </document>
